# backend/internal/dto/task_comment_request.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateTaskCommentRequest struct {
+	Comment string `json:"comment" binding:"required"`
+}
